# setup-workspace-mac

./: .gitignore  01-basics.sh  01-homebrew.sh  02-zsh_enhance.sh  03-miniconda.sh  03-python_environment.sh  04-python_environment.sh  04-r_environment.sh  05-fsl.sh  05-r_environment.sh  06-afni.sh  06-fsl.sh  07-afni.sh  07-freesurfer.sh  08-ants.sh  08-freesurfer.sh  09-ants.sh  09-zsh.sh  LICENSE  README.md  envs  install_packages.sh  pyproject.toml  update_packages.sh
environment_spec/: pyproject.toml  python_environment.yml  r_environment.txt  r_environment_github.txt  renv.toml
misc/: pyproject.toml  renv.toml  systools_macos.yml  systools_rhel8.yml
script/: deactivate_systools.sh  fix_littler_macos.sh  install_afni.sh  install_ants.sh  install_basic_packages.sh  install_convert3d.sh  install_dcm2niix.sh  install_freesurfer.sh  install_fsl.sh  install_fsleyes.sh  install_itksnap.sh  install_mricrogl.sh  install_oh_my_zsh.sh  install_python_environment.sh  install_quarto.sh  install_r_cran.sh  install_r_environment.sh  install_r_source.sh  install_surfice.sh  install_system_packages.sh  install_texlive.sh  install_workbench.sh  pyproject.toml  python_environment.yml  utils.sh
scripts/: activate_systools.sh  fix_littler_macos.sh  install_afni.sh  install_convert3d.sh  install_dcm2niix.sh  install_fsl.sh  install_fsleyes.sh  install_itksnap.sh  install_r_environment.sh  install_surfice.sh  install_system_packages.sh  install_workbench.sh
talapas/: .gitignore  install_packages.sh  update_packages.sh
talapas/misc/: pyproject.toml
talapas/script/: install_afni.sh  install_ants.sh  install_convert3d.sh  install_freesurfer.sh  install_fsl.sh  install_fsleyes.sh  install_itksnap.sh  install_mricrogl.sh  install_oh_my_zsh.sh  install_python_environment.sh  install_r_environment.sh  install_r_source.sh  install_surfice.sh  install_system_tools.sh  install_texlive.sh  install_workbench.sh
