[tool.poetry]
name = "pantheon"
version = "1.0.0"
description = ""
authors = ["Zhifang Ye <zhifang.ye.fghm@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.9.*"
numpy = "*"
pandas = "*"
scipy = "*"
statsmodels = "*"
scikit-learn = "*"
scikit-image = "*"
ipython = "*"
ipywidgets = "*"
jupyterlab = "*"
jupyterlab-lsp = "*"
python-lsp-server = {version = "*", extras = ["all"]}
xeus-python = "*"
jupyterlab_code_formatter = "*"
jupytext = "*"
jupyterlab-execute-time = "*"
nbdime = "*"
matplotlib = "*"
seaborn = "*"
plotly = "*"
kaleido = "!=0.2.1.post1"
bokeh = "*"
jupyter_bokeh = "*"
lets-plot = "*"
vtk = "9.1.0"
mayavi = "*"
panel = "*"
holoviews = "*"
pyvista = "*"
ipyvtklink = "*"
ipyvolume = "*"
h5py = "*"
black = "*"
joblib = "*"
memory-profiler = "*"
pingouin = "*"
pyjanitor = "*"
cookiecutter = "*"
yellowbrick = "*"
bigmpi4py = "*"
ftfy = "*"
rpy2 = "*"
radian = "*"
xgboost = "*"
torch = ">=1.10"
torchvision = "*"
timm = "*"
tensorflow = ">=2.8"
umap-learn = "*"
gensim = "*"
datalad = "*"
nilearn = "*"
nipype = "*"
mne = "*"
pymvpa2 = "*"
hypertools = "*"
antspynet = "*"
brainstat = "*"
brainspace = "*"
surfplot = "*"
neuropythy = "*"
pycortex = "*"
pysurfer = {version = "*", extras = ["save_movie"]}
heudiconv = "*"
pybids = "*"
bidscoin = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
