[tool.poetry]
name = "pantheon"
version = "1.0.0"
description = ""
authors = ["Zhifang Ye <zhifang.ye.fghm@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.10.*"
numpy = "~1.23"
pandas = "*"
scipy = "*"
statsmodels = "*"
scikit-learn = "*"
scikit-image = "*"
ipython = "*"
ipywidgets = "*"
jupyterlab = "*"
jupyterlab-lsp = "*"
python-lsp-server = {version = "*", extras = ["all"]}
xeus-python = "*"
jupyterlab_code_formatter = "*"
jupytext = "*"
jupyterlab-execute-time = "*"
nbdime = "*"
matplotlib = "*"
seaborn = "*"
plotly = "*"
kaleido = "!=0.2.1.post1"
bokeh = "*"
jupyter_bokeh = "*"
lets-plot = "*"
vtk = "==9.2.2"
mayavi = "*"
panel = "*"
holoviews = "*"
pyvista = "*"
ipyvtklink = "*"
ipyvolume = "*"
h5py = "*"
black = "*"
joblib = "*"
memory-profiler = "*"
pyjanitor = "*"
cookiecutter = "*"
pingouin = "*"
yellowbrick = "*"
bigmpi4py = "*"
ftfy = "*"
regex = "*"
rpy2 = "*"
radian = "*"
xgboost = "*"
torch = "^1.13"
torchvision = "*"
torchtext = "*"
pytorch-lightning = "*"
torchlens = { git = "https://github.com/johnmarktaylor91/torchlens.git"}
timm = "*"
tensorflow = "^2.10"
open_clip_torch = "*"
clip = { git = "https://github.com/openai/CLIP.git" }
umap-learn = "*"
gensim = "*"
datalad = "*"
nilearn = "*"
nipype = "*"
mne = "*"
rsatoolbox = "*"
hypertools = "*"
antspynet = "*"
brainstat = "*"
brainspace = "*"
surfplot = "*"
neuropythy = "*"
pycortex = "*"
pysurfer = {version = "*", extras = ["save_movie"]}
heudiconv = "*"
dcm2bids = "*"
pybids = "*"
bidscoin = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
