[tool.poetry]
name = "pantheon"
version = "1.0.0"
description = ""
authors = ["Zhifang Ye <zhifang.ye.fghm@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.10"
# Basic
numpy = "~1.25"
pandas = "*"
ipython = "*"
jupyterlab = "*"
scipy = "*"
statsmodels = "*"
pingouin = "*"
joblib = "*"
# Machine learning
scikit-learn = "*"
xgboost = "*"
torch = ">=2.0"
torchvision = "*"
torchaudio = "*"
torchtext = "*"
pytorch-lightning = "*"
torchlens = { git = "https://github.com/johnmarktaylor91/torchlens.git"}
timm = "*"
tensorflow = ">=2.13"
open_clip_torch = "*"
umap-learn = "*"
gensim = "*"
yellowbrick = "*"
# Graphic
matplotlib = "*"
seaborn = "*"
plotly = "*"
kaleido = "!=0.2.1.post1"
bokeh = "*"
jupyter_bokeh = "*"
lets-plot = "*"
vtk = "*"
mayavi = "*"
traitsui = "~7" # constrained by mayavi(4.8.1)
panel = "*"
holoviews = "*"
pyvista = "*"
ipyvtklink = "*"
ipyvolume = "*"
scikit-image = "*"
# Utility
ipywidgets = "*"
jupyterlab-lsp = "*"
python-lsp-server = {version = "*", extras = ["all"]}
jupyterlab_code_formatter = "*"
jupytext = "*"
jupyterlab_execute_time = "*"
jupyterlab-quarto = "*"
itables = "*"
nbdime = "*"
black = "*"
h5py = "*"
datalad = "*"
boto3 = "*"
s3fs = ">=2023"
memory-profiler = "*"
pyjanitor = "*"
cookiecutter = "*"
bigmpi4py = "*"
rpy2 = "*"
radian = "*"
# Neuroimaging main
nibabel = "*"
indexed_gzip = "*"
nilearn = "*"
nipype = "*"
mne = "*"
antspyx = "==0.3.8"
# Neuroimaging utility
rsatoolbox = "*"
hypertools = "*"
neuropythy = "*"
neuromaps = {git = "https://github.com/netneurolab/neuromaps.git"}
glmsingle = { git = "https://github.com/cvnlab/GLMsingle.git"}
resmem = "*"
deepmreye = "*"
# Neuroimaging plotting
brainstat = "*"
brainspace = "*"
surfplot = "*"
pycortex = "*"
pysurfer = {version = "*", extras = ["save_movie"]}
# Neuroimaging BIDS
heudiconv = "*"
dcm2bids = "*"
pybids = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
