[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "~3.11"
# Basic
numpy = ">=1.25"
pandas = "*"
ipython = "*"
jupyterlab = "*"
scipy = "*"
statsmodels = "*"
pingouin = "*"
joblib = "*"
# Machine learning
scikit-learn = "*"
xgboost = "*"
torch = ">=2.0"
torchvision = "*"
torchaudio = "*"
torchtext = "*"
pytorch-lightning = "*"
torchlens = "*"
timm = "*"
tensorflow = ">=2.15"
open_clip_torch = "*"
umap-learn = "*"
gensim = "*"
yellowbrick = "*"
# Graphic
matplotlib = "*"
seaborn = "*"
plotly = "*"
kaleido = "!=0.2.1.post1"
bokeh = "*"
jupyter_bokeh = "*"
lets-plot = "*"
vtk = "*"
mayavi = ">=4.8.2"
panel = "*"
holoviews = "*"
pyvista = "*"
ipyvtklink = "*"
ipyvolume = "*"
scikit-image = "*"
# Utility
ipywidgets = "*"
jupyterlab-lsp = "*"
python-lsp-server = {version = "*", extras = ["all"]}
jupyterlab_code_formatter = "*"
jupytext = "*"
jupyterlab_execute_time = "*"
jupyterlab-quarto = "*"
itables = "*"
nbdime = "*"
black = "*"
h5py = "*"
datalad = "*"
boto3 = "*"
s3fs = ">=2023"
memory-profiler = "*"
pyjanitor = "*"
cookiecutter = "*"
bigmpi4py = "*"
rpy2 = "*"
radian = "*"
# Neuroimaging main
nibabel = "*"
indexed_gzip = "*"
nilearn = "*"
nipype = "*"
mne = "*"
antspyx = "*"
# Neuroimaging utility
rsatoolbox = "*"
hypertools = "*"
neuropythy = "*"
neuromaps = {git = "https://github.com/netneurolab/neuromaps.git"}
glmsingle = { git = "https://github.com/cvnlab/GLMsingle.git"}
resmem = "*"
deepmreye = "*"
# Neuroimaging plotting
brainstat = "*"
brainspace = "*"
surfplot = "*"
pycortex = "*"
pysurfer = {version = "*", extras = ["save_movie"]}
# Neuroimaging BIDS
heudiconv = "*"
dcm2bids = "*"
pybids = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
